# trading-system

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.api  High level what is milestone 11 all about.md  PROJECT.md  README.md  STATUS.md  docker-compose.yml  pyproject.toml
DOCS/: domain-model.md  milestone-1-summary.md  milestone-10-issue-map.md  milestone-11-issue-map.md  milestone-12-issue-map.md  milestone-13-issue-map.md  milestone-14-issue-map.md  milestone-15-issue-map.md  milestone-16-issue-map.md  milestone-2-roadmap.md  milestone-4-market-context-design.md  milestone-4-summary.md  milestone-5-review-learning-and-local-ops-design.md  milestone-6-closeout.md  milestone-6-market-data-provider-design.md  milestone-6a-yfinance-market-data-closeout.md  milestone-6b-provider-boundary-hardening-closeout.md  milestone-6c-massive-daily-bars-closeout.md  milestone-7-closeout.md  milestone-7-issue-map.md  milestone-7a-runtime-skeleton.md  milestone-7b-reference-lookup-foundation.md  milestone-7c-trade-capture-draft-contract.md  milestone-7d-natural-language-parser-boundary.md  milestone-7e-fastapi-trade-capture-service.md  milestone-7f-react-trade-capture-workspace.md  milestone-8-issue-map.md  milestone-9-issue-map.md  milestones-3-to-5-roadmap.md  post-milestone-11-roadmap.md  product-roadmap.md  systems-blueprint.md
frontend/: index.html  package-lock.json  package.json
scripts/: demo_swing_trade.py
tests/: __init__.py  test_alpaca_market_data_source.py  test_alpaca_options_chain_source.py  test_alpaca_paper_broker.py  test_api_health.py  test_api_trade_capture.py  test_api_trade_plans.py  test_broker_execution_service.py  test_broker_reconciliation_service.py  test_cli_finqual_fetch.py  test_cli_market_context.py  test_cli_market_data_fetch.py  test_cli_retrieval.py  test_cli_secrets.py  test_cli_workflow_commands.py  test_finqual_context_sources.py  test_finqual_provider_registry.py  test_json_persistence.py  test_local_secret_vault.py  test_manual_fill_recording.py  test_market_context_persistence.py  test_market_context_service.py  test_market_data_provider_registry.py  test_massive_market_data_source.py  (+13 more)
(+102 files in other folders)
