[project]
name = "trading-system"
version = "0.1.0"
description = "Structured discretionary trading system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "massive>=2.5,<3.0",
    "psycopg>=3.2",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "yfinance>=1.3,<2.0",
]

[project.scripts]
trading-system = "trading_system.app.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_system"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
